--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   command = "rake build"
   publish = "build/"
 [template.environment]
-  SEGMENT_KEY = "nkahbMvomcDFju5uDtqW6s2uXKAbMtk0"
+  SEGMENT_KEY = ""
 
 [[redirects]]
   from = "/en/*"
