--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
-[build]
-  command = "bundle exec middleman build"
-  publish = "build/"
-[template.environment]
-  SEGMENT_KEY = ""
-
-[[redirects]]
-  from = "/en/*"
-  to = "/en/404.html"
-  status = 404
+# [build]
+#   command = "bundle exec middleman build"
+#   publish = "build/"
+# [template.environment]
+#   SEGMENT_KEY = ""
+#
+# [[redirects]]
+#   from = "/en/*"
+#   to = "/en/404.html"
+#   status = 404
